# agent-builder

./: .gitignore  API_DOCUMENTATION.md  WORKFLOW_AI_ENHANCEMENT_PLAN.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
.claude/: settings.local.json
agent_builder_ui/: .env.example  README.md  package-lock.json  package.json
agent_builder_ui/app/: app.css  root.tsx  routes.ts
agent_maker_fastapi/: README.md  app.py  messages.db  run.sh
agents/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
agents/migrations/: 0001_initial.py  0002_initial.py  0003_alter_agent_name.py
common/: models.py  views.py
credentials/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
credentials/migrations/: 0001_initial.py  0002_alter_credentialtype_options_credentialcategory_and_more.py
django_setup/: asgi.py  settings.py  urls.py  wsgi.py
fixtures/: sample_data.json
projects/: admin.py  models.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_initial.py
users/: authentication.py  models.py  serializers.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py
workflow_maker_fastapi/: README.md  app.py  messages.db  run.sh
workflows/: NODE_SPECIFICATIONS.md  admin.py  authentication.py  models.py  seed_node_registry.py  serializers.py  urls.py  views.py
workflows/execution/: __init__.py  handler.py  utils.py
workflows/migrations/: 0001_initial.py  0002_remove_workflow_status_workflowexecution_and_more.py  0003_workflownode_visual_position.py  0004_nodecategory_nodetype.py  (+1 more)
(+76 files in other folders)
